White space on at end of body fixed

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -349,4 +349,5 @@ body {
   /* Set the fixed height of the footer here */
   height: 55px;
   line-height: 55px; /* Vertically center the text there */
+  background-color: #000000;
 }
